# para

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
benchmark/: CMakeLists.txt
benchmark/src/: para_bench.cpp
cmake/: compile-options.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/para/: multi_queue.hpp  para.hpp  single_queue.hpp  task_queue.hpp
src/: multi_queue.cpp  single_queue.cpp
tests/: CMakeLists.txt
tests/src/: para_test.cpp
